# rust-connectfour-ai

./: .gitignore  AIQ-7x6.NN  AIQ-7x6.NN.bak  AIQOff-7x6.NN  AIValue-7x6.NN  AIValue-7x6.NN.bak  Cargo.toml  README.md
nn/: Cargo.toml
src/: .main.rs.un~  main.rs
src/game/: field.rs  mod.rs
src/game/player/: .ai_q_player.rs.un~  ai_gen_player.rs  ai_q_player.rs  ai_qoff_player.rs  ai_value_player.rs  io_player.rs  minimax_player.rs  mod.rs  random_player.rs
