[package]
name = "connect_four"
version = "0.1.0"
authors = ["FlixCoder"]

[dependencies]
rand = "0.3.*"
nn = { path = "../nn" }  #https://github.com/jackm321/RustNN
rustc-serialize = "0.3.*"


[profile.dev]
opt-level = 3
debug = true
lto = true
panic = "unwind"
debug-assertions = true

[profile.release]
opt-level = 3
debug = false
lto = true
panic = "unwind"
debug-assertions = false

